Fixing z-index bug, adding drop shadow to card previews

--- a/src/client/components/board/CardPreview.scss
+++ b/src/client/components/board/CardPreview.scss
@@ -11,6 +11,10 @@
   font-family: initial;
   z-index: 1000;
 
+  .card {
+    box-shadow: 0 .05em .1em rgba(0,0,0,.7);
+  }
+
   &.show {
     opacity: 1;
   }
