--- a/src/client/components/board/Players.scss
+++ b/src/client/components/board/Players.scss
@@ -5,6 +5,7 @@
   display: inline-block;
   user-select: none;
   pointer-events: none;
+  z-index: 1;
 
   ul {
     display: inline-block;
